Fixed style on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,19 @@ body.main-page {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100dvh;
+    padding: 20px 10px;
     background-color: #ffffff;
     color: #4d4d4d;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 380px) and (max-height: 700px) {
+    body.main-page {
+        justify-content: flex-start;
+        padding-top: 80px;
+        min-height: auto;
+    }
 }
 
 .google-spoof {
@@ -17,7 +27,11 @@ body.main-page {
     height: auto;
 }
 
-
+@media (max-width: 500px) {
+    .logo img {
+        width: 200px;
+    }
+}
 
 .buttons {
     margin-top: 20px;
@@ -349,9 +363,14 @@ body.main-page {
   position: absolute;
   top: 10px;
   right: 15px;
-  font-size: 24px;
+  font-size: 26px;
   cursor: pointer;
   color: #999;
+  font-weight: 900;
+}
+
+.creative-popup:hover .close-popup:hover {
+  color: #3367d6;
 }
 
 .hidden {
